@@ -4,4 +4,4 @@ A Flutter project for American Enlgish Words
 
 ## Getting Started
 
-This project is in beta and its main purpose is to develop a mobile version of American English Words which is intent to help people learning English Increase their vocabulary.
+This project is in beta and its main purpose is to develop a mobile version of American English Words which is intent to help people learning English to increase their vocabulary.
