@@ -15,7 +15,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
   http: ^0.11.3+17
   intl: ^0.15.7
   sqflite: ^1.0.0
@@ -24,8 +24,10 @@ dependencies:
   scoped_model: ^1.0.1
   flutter_tts: ^0.1.2
   flutter_web_browser: ^0.9.0+1
-
+  flutter_i18n: ^0.5.2
+  
 dev_dependencies:
+  intl_translation: ^0.17.1
   flutter_test:
     sdk: flutter
 
@@ -37,9 +39,7 @@ flutter_icons:
     ios: false
     adaptive_icon_background: "#FFAFAFA"
 
-
 flutter:
-
   uses-material-design: true
   
   fonts:
